# fractol

./: CMakeLists.txt  Makefile  README.md  fractol.h
ft_printf/: Makefile
minilibx_macos/: mlx_init_loop.m  mlx_new_window.m
sources/: main.c
sources/alloc/: free_fgr.c  free_img.c  free_tab.c  new_coor.c  new_cplx.c  new_fgr.c  new_img.c  new_tab.c
sources/draw/: draw_buddhabrot.c  draw_julia.c  draw_mandelbrot.c  draw_sword.c  put_pixel.c
sources/events/: julia_hook.c  key_hook.c  mouse_hook.c
sources/init/: init_img.c  init_mlx.c  setting.c
sources/main/: fractol.c  init.c
sources/tools/: get_frac.c  lower_case.c  usage.c
